@@ -175,7 +175,11 @@ static int fp_ucount_dec( cyg_file *fp )
 static int fd_close( int fd )
 {
     int error = 0;
-    cyg_file *fp = desc[fd];
+    cyg_file *fp;
+
+    CYG_ASSERT(((0 < fd) && (fd<CYGNUM_FILEIO_NFD)), "fd out of range");    
+
+    fp = desc[fd];
 
     if( fp != FD_ALLOCATED && fp != NULL)
     {
@@ -202,6 +206,8 @@ __externC int cyg_fd_alloc(int low)
 {
     int fd;
 
+    CYG_ASSERT(((0 < low) && (low<CYGNUM_FILEIO_NFD)),"fd out of range");
+
     FILEIO_MUTEX_LOCK(fdlock);
     
     for( fd = low; fd < CYGNUM_FILEIO_NFD; fd++ )
@@ -226,6 +232,9 @@ __externC int cyg_fd_alloc(int low)
 
 __externC void cyg_fd_assign(int fd, cyg_file *fp)
 {
+
+    CYG_ASSERT(((0 < fd) && (fd<CYGNUM_FILEIO_NFD)),"fd out of range");
+
     FILEIO_MUTEX_LOCK(fdlock);
 
     fd_close( fd );
@@ -243,6 +252,8 @@ __externC void cyg_fd_assign(int fd, cyg_file *fp)
 __externC int cyg_fd_free(int fd)
 {
     int error;
+
+    CYG_ASSERT(((0 < fd) && (fd<CYGNUM_FILEIO_NFD)),"fd out of range");
     
     FILEIO_MUTEX_LOCK(fdlock);
     
@@ -266,6 +277,8 @@ __externC int cyg_fd_free(int fd)
 
 __externC cyg_file *cyg_fp_get( int fd )
 {
+    CYG_ASSERT(((0 < fd) && (fd<CYGNUM_FILEIO_NFD)),"fd out of range");
+
     FILEIO_MUTEX_LOCK(fdlock);
     
     cyg_file *fp = desc[fd];
