@@ -1,3 +1,8 @@
+2004-03-25  Sebastien Couret  <sebastien.couret@elios-informatique.fr>
+
+	* src/fd.cxx: Added CYG_ASSERT bound checking for file descriptor
+	numbers (0<fd<CYGNUM_FILEIO_NFD).
+
 2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/fio.h: If no POSIX then CYG_FILEIO_DELIVER_SIGNALS
